# whyline-denver

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml  hourly-bq-load.yml  hourly-gtfs-rt.yml  nightly-bq.yml  nightly-duckdb.yml  nightly-ingest.yml  realtime-bq-load.yml  realtime-gtfs-rt.yml
.streamlit/: config.toml
api/: Dockerfile  deps.py  main.py  models.py  requirements.txt
api/routers/: downloads.py  filters.py  health.py  query.py  sql.py
app/: streamlit_app.py  streamlit_app_old.py
app/assets/: manifest.json
app/components/: __init__.py  branding.py  charts.py  prebuilt_questions.py  question_input.py  results_viewer.py  sidebar.py  sql_editor.py
app/placeholders/: 404.html  index.html  robots.txt  site.webmanifest  sitemap.xml
app/utils/: __init__.py  data_loaders.py  formatting.py  session.py  (+2 more)
data/: sync_state.json
dbt/: dbt_project.yml  exposures.yml
docs/: APP_STRUCTURE.md  ARCHITECTURE.md  COST_OPTIMIZATION_DEC_2025.md  GTFS_RT_STRATEGY.md  NOAA_DATA_STRATEGY.md  QA_Validation_Guide 2.md  QA_Validation_Guide.md  README.md  SEO_GUIDE.md  THEMING.md  app_semantic_layer.drawio  bq_naming_and_time.md
frontend/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
load/: __init__.py  bq_load.py  registry.py
scripts/: backfill_noaa_2024.sh  dbt_with_env.py  ingest_once.sh  qa_script.sh
tests/: conftest.py  test_smoke.py
tools/: export_diagrams.sh
(+189 files in other folders)
