[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","UP","N","S","C90"]   # style + bugs + security + complexity
lint.ignore = ["E501"]                                # handled by black
exclude = ["dbt/target","dbt/.dbt"]

# S608 (Possible SQL injection) is ignored because all SQL queries are parameterized and inputs are sanitized elsewhere.
# E402 (module level import not at top) is ignored for app/ files due to necessary sys.path manipulation for Streamlit
[tool.ruff.lint.per-file-ignores]
"*.py" = ["S101", "UP007", "UP035", "UP006", "B904", "N802", "S310", "S608"]
"app/**/*.py" = ["E402", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whyline"
version = "0.0.0"
description = "WhyLine Denver"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=16.1.0",
    "google-cloud-bigquery>=3.20.0",
    "google-cloud-storage>=2.16.0",
]

[tool.setuptools.packages.find]
where = ["src"]
